# WarspiteEngine

./: .gitattributes  .gitignore  CMakeLists.txt  Naming.MD  Projects - Shortcut.lnk  README.MD  SDLGame.sln  Warspite.cbp  WarspiteGame.sln  azure-pipelines.yml  build-deps-ci-x86.ps1  build-deps-x86.ps1  build-deps.ps1  build-deps.sh  build.sh  debug.txt  sonic_test.pdn
Engine/: AnimatedGraphic.cpp  AnimatedGraphic.h  AudioSource.cpp  AudioSource.h  BaseCreator.h  Button.cpp  Button.h  CMakeLists.txt  CTexture.cpp  CTexture.h  Camera.cpp  Camera.h  Enemy.cpp  Enemy.h  EngineFileSystem.cpp  EngineFileSystem.h  EngineMetadata.py  EngineTypes.h  FPSCounter.cpp  FontManager.cpp  FontManager.h  Game.cpp  Game.h  GameObject.h  GameObjectDictionary.cpp  GameObjectDictionary.h  GameObjectFactory.cpp  GameObjectFactory.h  GameState.h  GameStateBase.cpp  GameStateBase.h  GameStateDictionary.cpp  GameStateDictionary.h  GameStateManager.cpp  GameStateManager.h  GitVersion.py  GitVersion.tt  InputHandler.cpp  InputHandler.h  Layer.h  (+47 more)
Engine/assets/: Test.json
Engine/assets/maps/: 62ccabb5dd1364c2f5774f92b233d3c4c2dab403_full.json  help.json  help2.json  lamo.json  map02.json  meow.json  test.json  testMap.json  untitled.json
Engine/assets/resource/states/: PlayState.json  SystemMenus.json
Engine/assets/scripts/: test.py  test2.py
Engine/assets/states/: PlayState.json  SystemMenus.json
Engine/assets/tilesets/: 62ccabb5dd1364c2f5774f92b233d3c4c2dab403_full.json  testTileset.json
Engine/etc/: Base64.cpp
Engine/src/: AnimatedGraphic.cpp  AnimatedGraphic.h  AudioSource.cpp  AudioSource.h  BaseNPC.cpp  BaseNPC.h  BaseObject.cpp  Button.cpp  Button.h  CTexture.cpp  CTexture.h  Camera.cpp  Camera.h  ConfigParser.h  DialogueChoice.cpp  DialogueChoice.h  DialogueManager.cpp  DialogueManager.h  DialogueParser.cpp  DialogueParser.h  DialogueTypes.h  DialogueWindow.cpp  DialogueWindow.h  DoorLink.cpp  DoorLink.h  DownloadPython.py  Enemy.cpp  Enemy.h  EngineFileSystem.cpp  EngineFileSystem.h  EngineMetadata.py  FPSCounter.cpp  FPSCounter.h  FadeObject.cpp  FadeObject.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  GameObjectDictionary.cpp  (+59 more)
Engine/src/logs/: pyout.txt
Game/: CMakeLists.txt
Game/assets/maps/: map01 - Copy.json  map01.json  map02.json
Game/assets/resource/dialogue/: test.diag
Game/assets/resource/fonts/: Roboto.json
Game/assets/resource/states/: PlayState.json  SystemMenus.json
Game/assets/scripts/: sys_callbacks.py  test.py  test2.py
Game/assets/textures/: player.pdn
Game/assets/tilesets/: EngineTileset.json  TestTiles.json
Game/src/: GameDLLMetadata.py  GameMetadata.h  ObjectRegisterBuffer.cpp  ObjectRegisterBuffer.h  StateRegisterBuffer.cpp  StateRegisterBuffer.h  TestGObject.cpp  TestGObject.h  TestState.cpp  TestState.h  WGame.cpp  WGame.h  main.cpp
Launcher/: CMakeLists.txt
Launcher/launcher/: CMakeLists.txt  main.cpp  main_linux.cpp
Launcher/launcher/src/: main.cpp  main_linux.cpp
Launcher/main/: CMakeLists.txt  launcher_main.cpp
Launcher/main/src/: launcher_main.cpp  launcher_main.rc  resource.h
SDLGame/: Button.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameStateManager.cpp  GameStateManager.h  InputHandler.cpp  InputHandler.h  MenuGameState.cpp  MenuGameState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  SDLGame.vcxproj  SDLGame.vcxproj.filters  SDLGameObject.cpp  SDLGameObject.h  TextureManager.cpp  TextureManager.h  UIGameState.cpp  UIGameState.h  Vector2D.h  main.cpp
Setup/: installer.iss
WarspiteGame/: Button.cpp  Button.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameStateBase.cpp  GameStateBase.h  GameStateManager.cpp  GameStateManager.h  GitVersion.h  GitVersion.tt  InputHandler.cpp  InputHandler.h  MainMenuGameState.cpp  MainMenuGameState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  SDLGameObject.cpp  SDLGameObject.h  TestObject.cpp  TestObject.h  TextureManager.cpp  Vector2D.h  WarspiteGame.vcxproj  WarspiteGame.vcxproj.filters  main.cpp
sdk/: ExportMap.py  WarspiteGame.tiled-project  WarspiteGame.tiled-session  test.json  testTileset.json
sdk/maps/: TestTiles.json  help.json  help2.json  map01.json  map02.json  testMap.json  untitled.json
sdk/resource/: objects.json
sdk/resource/dialogue/: test.diag
sdk/scripts/: test.py
sdk/textures/: door.psd  door_anim.psd  procedural.psd
sdk/textures/dev/: EngineTileset.pdn
sdk/tilesets/: EngineTileset.json  TestTiles.json  procedural.json
sdk/tools/: ExportMap.py  RunEngine.py  SetupTiledProject.py
sdk/tools/MapGenerator/: main.py
shared/: Singleton.h
shared/src/: CallbackHandler.cpp  CallbackHandler.h  EngineTypes.h  ExportRules.h  GameObject.h  GameState.h  GameStateBase.cpp  GameStateBase.h  ICamera.h  IDialogueManager.h  IGame.h  IGameObjectDictionary.h  IGameObjectFactory.h  IGameStateDictionary.h  IGameStateFactory.h  IGameStateManager.h  IScriptManager.h  ISingleton.h  ISoundManager.h  ITextureManager.h  IWGame.h  ObjectFactory.h  ObjectParams.h  UIBase.cpp  UIBase.h  Vector2D.h  WarspiteObject.cpp  WarspiteObject.h
